syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.skillfactory.reviewservice";

service ReviewService {
    rpc LeaveReview(LeaveReviewRequest) returns (ReviewResponse);
}

message LeaveReviewRequest {
    string user_id = 1;
    string product_id = 2;
    string review_text = 3;
    int32 rating = 4;
}

message ReviewResponse {
    string review_id = 1;
    string user_id = 2;
    string product_id = 3;
    string review_text = 4;
    int32 rating = 5;
}